--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <h1 id="mensaje">Ana, ¿puedo ser tu novio? 💌</h1>
   <div class="botones">
     <button onclick="cambiarMensaje()">Claro que sí 💘</button>
-    <button id="btnNo" onmouseover="moverBoton()">No 😅</button>
+    <button id="btnNo" onmouseover="moverBoton()">No >:c</button>
   </div>
 
   <script>
