--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
   <style>
     body {
       margin: 0;
+      background: linear-gradient(to right, #ff9a9e, #fad0c4);
       font-family: 'Segoe UI', sans-serif;
-      background: url('borderosas1.png') no-repeat center center;
-      background-size: cover;
-      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
+      height: 100vh;
       flex-direction: column;
       text-align: center;
       overflow: hidden;
@@ -25,17 +24,18 @@
     }
 
     h1 {
-      color: white;
       font-size: 2.5em;
+      color: white;
+      text-shadow: 2px 2px 5px #00000050;
       margin: 20px;
-      text-shadow: 2px 2px 5px #000;
+      max-width: 90%;
       transition: all 0.5s ease;
-      max-width: 80%;
     }
 
     .botones {
       display: flex;
       gap: 20px;
+      position: relative;
     }
 
     button {
@@ -43,16 +43,17 @@
       padding: 10px 20px;
       border: none;
       border-radius: 12px;
-      background-color: #fff;
+      background-color: white;
       color: #e91e63;
       cursor: pointer;
       box-shadow: 0 4px 10px rgba(0,0,0,0.3);
       transition: 0.3s ease;
       position: relative;
+      z-index: 1;
     }
 
     button:hover {
-      background-color: #ffe6ec;
+      background-color: #fce4ec;
     }
 
     #btnNo {
@@ -68,9 +69,10 @@
 <body>
   <img id="rosa" src="rosa1.png" alt="Rosa">
   <h1 id="mensaje">Ana, ¿puedo ser tu novio? 💌</h1>
+
   <div class="botones">
     <button onclick="cambiarMensaje()">Claro que sí 💘</button>
-    <button id="btnNo" onmouseover="moverBoton()">No >:c</button>
+    <button id="btnNo" onmouseover="moverBoton()">Ño.</button>
   </div>
 
   <script>
