--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
     function cambiarMensaje() {
       const mensaje = document.getElementById("mensaje");
       mensaje.innerText = "Pasémoslo bien juntos, ¿sí? Quiero estar ahí contigo en las buenas y en las malas jsjs.";
+      mensaje.innerText = "--- Hoy toca nochesita de boblox ¿si o que, amor? ---";
     }
 
     function moverBoton() {
