--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
   <div class="botones">
     <button onclick="cambiarMensaje()">Claro que sí 💘</button>
-    <button id="btnNo" onmouseover="moverBoton()">No 😅</button>
+    <button id="btnNo" onmouseover="moverBoton()">Ñio</button>
   </div>
 
   <audio id="musica" src="cancion.mp3"></audio>
