--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
     <div class="botones">
       <button onclick="cambiarMensaje()">Claro que sí 💘</button>
-      <button id="btnNo" onmouseover="moverBoton()">No 😅</button>
+      <button id="btnNo" onmouseover="moverBoton()">Ño</button>
     </div>
   </div>
 
@@ -118,7 +118,7 @@
       const rosa = document.getElementById("rosa");
       const musica = document.getElementById("musica");
 
-      mensaje.innerText = "Pasémoslo bien juntos, ¿sí? Quiero estar ahí contigo en las buenas y en las malas jsjs.";
+      mensaje.innerText = "Hoy toca noche de roblox ¿Si o que, amor? jsjs";
       rosa.style.animationPlayState = 'running';
       musica.play();
 
